# rust-authzn

./: Cargo.toml  README.md
.github/workflows/: rust.yml  security-audit.yml
src/: lib.rs
src/adapter/outbound/: mod.rs  okka_adapter.rs
src/core/domain/auth/: authentication.rs  authorization.rs  error.rs  mod.rs  pkce.rs  shared.rs
src/port/inbound/: authentication.rs  authorization.rs
src/port/outbound/: authentication_repository.rs  authorization_repository.rs  mod.rs  oauth_provider.rs
