[package]
name = "rust-authzn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version =  "1.43.0", features = ["rt" ,"net", "macros"] }

uuid = {version = "1.13.0", features = ["v7"]}
getrandom = "0.3.0"
thiserror = "2"
url = "2.5.0"

base64ct = "1.6.0"
sha2 = "0.10.8"
rand = "0.9.0"
urlencoding = "2.1.3"
